--- a/section/templates/section/dashboard.html
+++ b/section/templates/section/dashboard.html
@@ -41,7 +41,7 @@ Dashboard
         <h5>Last 5 Orders</h5>
         <hr>
         <div class="card card-body">
-                    <a class="btn btn-primary btn-sm btn-block" href="">Create Order</a>
+                    <a class="btn btn-primary btn-sm btn-block" href="{% url 'createOrder' %}">Create Order</a>
                     <table class="table table-sm">
                         <tr>
                             <th>Customer</th>
