--- a/section/templates/section/dashboard.html
+++ b/section/templates/section/dashboard.html
@@ -58,7 +58,7 @@ Dashboard
                                 <td>{{order.product}}</td>
                                 <td>{{order.date_created}}</td>
                                 <td>{{order.status}}</td>
-                                <td><a class="btn btn-primary btn-sm btn-block" href="">update</a></td>
+                                <td><a class="btn btn-primary btn-sm btn-block" href="{% url 'updateOrder' order.id %}">update</a></td>
                                 <td><a class="btn btn-danger btn-sm btn-block" href="">remove</a></td>
 
 
